Articles section complete

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,68 @@
           <img src="{% static 'doctor.png' %}" alt="doctor" class="w-[80vw]" />
         </div>
       </section>
+      <section
+        class="flex justify-center bg-[#F1E7FC] py-[5vw] px-[10vw] rounded-2xl"
+      >
+        <div class="flex gap-10">
+          <div class="bg-white rounded-lg shadow-md p-5">
+            <img
+              src="{% static 'shop.jpg' %}"
+              alt="Card 1"
+              class="w-full rounded-lg"
+            />
+            <h2 class="text-lg font-bold mt-2">Our Covid-19 Response Slogan</h2>
+            <p class="text-sm mt-2">
+              We use a a team approach to providing health care, and involve the
+              patient as part of our team, nucilivement by our staff in the
+              community enhances our ability
+            </p>
+            <button
+              class="border rounded-[5px] border-solid border-black text-black px-4 py-2 mt-2 rounded w-full"
+            >
+              READ MORE
+            </button>
+          </div>
+          <div class="bg-white rounded-lg shadow-md p-5">
+            <img
+              src="{% static 'shop.jpg' %}"
+              alt="Card 2"
+              class="w-full rounded-lg"
+            />
+            <h2 class="text-lg font-bold mt-2">
+              Visitors & Patients Informations
+            </h2>
+            <p class="text-sm mt-2">
+              We use a team approach to providing health care, and involve the
+              patient as part of our team nvolvement by our staff in the
+              community enhances our ability
+            </p>
+            <button
+              class="border rounded-[5px] border-solid border-black text-black px-4 py-2 mt-2 rounded w-full"
+            >
+              READ MORE
+            </button>
+          </div>
+          <div class="bg-white rounded-lg shadow-md p-5">
+            <img
+              src="{% static 'shop.jpg' %}"
+              alt="Card 3"
+              class="w-full rounded-lg"
+            />
+            <h2 class="text-lg font-bold mt-2">Research & Digital Theorem</h2>
+            <p class="text-sm mt-2">
+              We use a team approach to providing health care, and involve the
+              patient as part of our mam nyalvement by our stalf in the
+              community enhances our ability
+            </p>
+            <button
+              class="border rounded-[5px] border-solid border-black text-black px-4 py-2 mt-2 rounded w-full"
+            >
+              READ MORE
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
